--- a/WebContent/order/order.html
+++ b/WebContent/order/order.html
@@ -125,7 +125,7 @@
 	</colgroup><tbody><tr>
 		<td>배송지 확인</td>
 		<td>
-		<input type="checkbox" onclick="ctrl_field(this.checked)"> 주문고객 정보와 동일합니다
+		<input type="checkbox" > 주문고객 정보와 동일합니다
 		</td>
 	</tr>
 	<tr>
@@ -135,8 +135,8 @@
 	<tr>
 		<td>받으실곳</td>
 		<td>
-		<input type="text" name="zipcode[]" id="zipcode0" size="3" class="line" readonly="" value="" required=""> -
-		<input type="text" name="zipcode[]" id="zipcode1" size="3" class="line" readonly="" value="" required="">
+		<input type="text" name="zipcode[]"  size="3" class="line" readonly="" value="" required=""> -
+		<input type="text" name="zipcode[]" size="3" class="line" readonly="" value="" required="">
 		다음에서 제공하는 오픈  API를 통해 해보자.
 		</td>
 	</tr>
@@ -197,14 +197,14 @@
 	<colgroup><col width="100">
 	</colgroup><tbody><tr>
 		<td>상품합계금액</td>
-		<td><p id="paper_goodsprice" style="width:146px;text-align:right;font-weight:bold;float:left;margin:0">0</p> 원</td>
+		<td><p style="width:146px;text-align:right;font-weight:bold;float:left;margin:0">0</p> 원</td>
 	</tr>
 	<tr>
 		<td>배송비</td>
 		<td>
-		<div id="paper_delivery_msg1" style="display: block;"><div id="paper_delivery" style="width:146px;text-align:right;font-weight:bold;float:left;margin:0">0</div>원</div>
-		<div id="paper_delivery_msg2" style="display:none;width:160;text-align:right"></div>
-		<div id="paper_delivery_msg_extra" class="small red" style="display:none;"></div>
+		<div style="display: block;"><div style="width:146px;text-align:right;font-weight:bold;float:left;margin:0">0</div>원</div>
+		<div style="display:none;width:160;text-align:right"></div>
+		<div style="display:none;"></div>
 		</td>
 	</tr>
 
@@ -247,11 +247,11 @@
 
 	<tr>
 		<th></th>
-		<td class="small red">(무통장입금의 경우 입금확인 후부터 배송단계가 진행됩니다)</td>
+		<td>(무통장입금의 경우 입금확인 후부터 배송단계가 진행됩니다)</td>
 	</tr>
 	<tr>
 		<th></th>
-		<td class="small red"><div id="coupon_typinfo" style="display:none">무통장입금에서만 사용가능한 쿠폰을 선택하였습니다. <br>다른 결제 수단을 선택하시려면 쿠폰을 제거 하여 주십시오.</div></td>
+		<td><div style="display:none">무통장입금에서만 사용가능한 쿠폰을 선택하였습니다. <br>다른 결제 수단을 선택하시려면 쿠폰을 제거 하여 주십시오.</div></td>
 	</tr>
 	</tbody></table>
 
