--- a/WebContent/order/order.html
+++ b/WebContent/order/order.html
@@ -142,15 +142,15 @@
 	</tr>
 	<tr>
 		<td></td>
-		<td><input type="text" name="address" id="address" class="lineBig" readonly="" value="" required=""></td>
+		<td><input type="text" name="address" id="address" readonly="" value="" required=""></td>
 	</tr>
 	<tr>
 		<td></td>
 		<td>
-			<input type="text" name="address_sub" id="address_sub" class="lineBig" value="" onkeyup="SameAddressSub(this)" oninput="SameAddressSub(this)" label="세부주소">
-			<input type="hidden" name="road_address" id="road_address" style="width:100%" value="" class="line">
-			<div style="padding:5px 5px 0 1px;font:12px dotum;color:#999;" id="div_road_address"></div>
-			<div style="padding:5px 0 0 1px;font:12px dotum;color:#999;" id="div_road_address_sub"></div>
+			<input type="text" name="address_sub" value=""  label="세부주소">
+			<input type="hidden" name="road_address"  style="width:100%" value="" >
+			<div style="padding:5px 5px 0 1px;font:12px dotum;color:#999;" ></div>
+			<div style="padding:5px 0 0 1px;font:12px dotum;color:#999;" ></div>
 		</td>
 	</tr>
 	<tr>
