--- a/WebContent/order/orderCheck.html
+++ b/WebContent/order/orderCheck.html
@@ -1,10 +1,55 @@
+<!-- 
+	작성일 : 2015/10/20
+	작성자 : 가승호
+	최종수정일 : 2015/10/20/ 17:15
+ -->
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>주문확인</title>
+<title>주문확인 페이지</title>
 </head>
 <body>
+<h2 align="center">주문이 완료되었습니다. 내역을 확인해주세요.</h2>
 
+
+
+
+<div align="center">
+<table style="" cellpadding="0" cellspacing="0" border="1" width="800px" height="600px">
+<thead> 
+<tr bordercolor="black">
+	<th >상세정보</th>
+	<th>내용</th>
+</tr>
+</thead>
+<tbody>
+</tr>
+	<tr bordercolor="black">
+	<th>주문번호</th>
+	<td> 주문번호를 보여주는 란</td>
+</tr>
+<tr bordercolor="black">
+	<th >결제금액</th>
+	<td> 결제금액을 보여주는 란</td>
+</tr>
+<tr bordercolor="black">
+	<th >상품내역</th>
+	<td> 뿡뿡이 밥버거</td>
+</tr>
+<tr bordercolor="black">
+	<th >배송정보</th>
+	<td> 서울시</td>
+</tr>
+<tr bordercolor="black">
+	<th >기타사항</th>
+	<td> 로켓배송!</td>
+</tr>
+
+</tbody>
+
+</table>
+<input type="button" value="확인">
+</div>
 </body>
 </html>
