--- a/WebContent/cart/cart.html
+++ b/WebContent/cart/cart.html
@@ -20,8 +20,6 @@
 	<th>선택</th>
 	<th>상품명</th>
 	<th>수량</th>
-	<th>삭제</th>
-</tr>
 </thead>
 <tbody>
 
@@ -29,40 +27,34 @@
 		<td><input type="checkbox" ><span>선택</span></td>
 		<td> 장바구니에 담은 상품</td>
 		<td><input type="number"></td>
-		<td><input type="button" value="삭제"></td>
 	</tr>
 	<tr bordercolor="black" align="center">
 		<td><input type="checkbox" ><span>선택</span></td>
 		<td> 장바구니에 담은 상품</td>
 		<td><input type="number"></td>
-		<td><input type="button" value="삭제"></td>
 	</tr>
 		<tr bordercolor="black" align="center">
 		<td><input type="checkbox" ><span>선택</span></td>
 		<td> 장바구니에 담은 상품</td>
 		<td><input type="number"></td>
-		<td><input type="button" value="삭제"></td>
 	</tr>
 	
 		<tr bordercolor="black" align="center">
 		<td><input type="checkbox" ><span>선택</span></td>
 		<td> 장바구니에 담은 상품</td>
 		<td><input type="number"></td>
-		<td><input type="button" value="삭제"></td>
 	</tr>
 	
 		<tr bordercolor="black" align="center">
 		<td><input type="checkbox" ><span>선택</span></td>
 		<td> 장바구니에 담은 상품</td>
 		<td><input type="number"></td>
-		<td><input type="button" value="삭제"></td>
 	</tr>
 	
 		<tr bordercolor="black" align="center">
 		<td><input type="checkbox" ><span>선택</span></td>
 		<td> 장바구니에 담은 상품</td>
 		<td><input type="number"></td>
-		<td><input type="button" value="삭제"></td>
 	</tr>
 	
 
@@ -80,6 +72,7 @@
 	
 		<td align="right">받으실적립금</td>
 		<td align="right" style="font-weight:bold;padding-left:25px"><span>0</span>원&nbsp;</td>
+		<td align="right">&nbsp;&nbsp;&nbsp;<input type="button" value="선택삭제"></td>
 		<td align="right">&nbsp;&nbsp;&nbsp;<input type="button" value="전체삭제"></td>
 	</tr>
 	</tbody></table>
